Job Table Stored Procedures

--- a/Views/signin.html
+++ b/Views/signin.html
@@ -12,7 +12,7 @@
 
     <!-- Menu Bar Logo -->
     <div id="MenuBar_Logo">
-      <a href="index.html" class="w3-bar-item w3-display-left"><img src="source/logo.png" alt="logo" style="width: 50%"></a>
+      <a href="index.html" class="w3-bar-item w3-display-left"><img src="../_source/logo.png" alt="logo" style="width: 50%"></a>
     </div>
 
     <!-- Menu Bar Buttons -->
@@ -32,13 +32,13 @@
     <div class="w3-display-container">
 
       <!-- Form Background Image -->
-      <img src="source/image_home.webp" alt="img" style="width: 100%">
+      <img src="../_source/image_home.webp" alt="img" style="width: 100%">
 
     </div>
 
 
     <!-- Sign In Form -->
-    <div id="SignIn_Form" class="w3-container w3-padding-large w3-display-middle w3-black w3-opacity-min">
+    <div id="SignIn_Form" class="w3-container w3-padding-large w3-display-middle w3-black w3-opacity-min w3-round">
 
       <form>
         <p>Username:</p>
