--- a/Views/signup.html
+++ b/Views/signup.html
@@ -8,11 +8,11 @@
 <body>
 
   <!-- Menu Bar Section -->
-  <section id="MenuBar" class="w3-top w3-bar w3-black w3-hide-small w3-padding-small">
+  <section id="MenuBar" class="w3-top w3-bar w3-black w3-hide-small w3-padding-small w3-round">
 
     <!-- Menu Bar Logo -->
     <div id="MenuBar_Logo">
-      <a href="index.html" class="w3-bar-item w3-display-left"><img src="source/logo.png" alt="logo" style="width: 50%"></a>
+      <a href="index.html" class="w3-bar-item w3-display-left"><img src="../_source/logo.png" alt="logo" style="width: 50%"></a>
     </div>
 
     <!-- Menu Bar Buttons -->
@@ -31,7 +31,7 @@
     <div class="w3-display-container">
 
       <!-- Form Background Image -->
-      <img src="source/image_home.webp" alt="img" style="width: 100%">
+      <img src="../_source/image_home.webp" alt="img" style="width: 100%">
 
     </div>
 
