--- a/Views/index.html
+++ b/Views/index.html
@@ -11,7 +11,7 @@
 
         <!-- Menu Bar Logo -->
         <div id="MenuBar_Logo">
-            <a href="#index.html" class="w3-bar-item w3-display-left"><img src="source/logo.png" alt="logo" style="width: 50%"></a>
+            <a href="#index.html" class="w3-bar-item w3-display-left"><img src="../_source/logo.png" alt="logo" style="width: 50%"></a>
         </div>
 
         <!-- Menu Bar Buttons -->
@@ -30,10 +30,10 @@
         <div class="w3-display-container">
 
             <!-- Home Image -->
-            <img id="Home_Image" src="source/image_home.webp" alt="img" style="width: 100%">
+            <img id="Home_Image" src="../_source/image_home.webp" alt="img" style="width: 100%">
 
             <!-- Home Logo -->
-            <img id="Home_Logo" src="source/logo.png" alt="logo" style="width: 200px" class="w3-display-bottomleft">
+            <img id="Home_Logo" src="../_source/logo.png" alt="logo" style="width: 200px" class="w3-display-bottomleft">
 
         </div>
 
@@ -61,21 +61,21 @@
             <!-- Service -->
             <div class="w3-third">
 
-                <img src="source/image_1.png" alt="img_service" style="width: 60%">
+                <img src="../_source/image_1.png" alt="img_service" style="width: 60%" class="w3-image w3-round">
                 <h3>Easy to Start</h3>
             </div>
 
             <!-- Service -->
             <div class="w3-third">
 
-                <img src="source/image_2.webp" alt="img_service" style="width: 60%">
+                <img src="../_source/image_2.webp" alt="img_service" style="width: 60%" class="w3-image w3-round">
                 <h3>Try for Free</h3>
             </div>
 
             <!-- Service -->
             <div class="w3-third">
 
-                <img src="source/image_3.jpg" alt="img_service" style="width: 60%">
+                <img src="../_source/image_4.jpg" alt="img_service" style="width: 60%" class="w3-image w3-round">
                 <h3>Control your Business</h3>
             </div>
 
